@@ -7,6 +7,7 @@ Changelog
  * The `Document` model can now be overridden using the new `WAGTAILDOCS_DOCUMENT_MODEL` setting (Alex Gleason)
  * Fix: Custom page managers no longer raise an error when used on an abstract model
  * Fix: Wagtail's migrations are now all reversible (benjaoming)
+ * Fix: Deleting a page content type now preserves existing pages as basic Page instances, to prevent tree corruption
 
 1.3.1 (05.01.2016)
 ~~~~~~~~~~~~~~~~~~
